# GoogleAgents

./: .gitignore  AGENTS.md  docker-compose.yml
.woodpecker/: 01-expected-to-pass.yml
devprompts/: base_agent.md  frontend_agent.md
docker/frontend/: Dockerfile  frontend.env  pyproject.toml  uv.toml
src/: schema.sql
src/frontend/: main.py
src/frontend/templates/: index.html
