[project]
name = "google-agent-frontend"
version = "0.1.0"
dependencies = [
    "google-adk",
    "fastapi",
    "uvicorn",
    "mysql-connector-python",
    "jinja2",
    "python-multipart",
    "requests",
    "beautifulsoup4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = []

[tool.uv]
managed = true
package = false
